[package]
name = "practices"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Exercises
[[bin]]
name = "1001"
path = "src/bin/1001_extremely_basic/main.rs"

[[bin]]
name = "1002"
path = "src/bin/1002_area_of_a_circle/main.rs"
